fix(security): authentification effective, contrôle de propriété et garde-fous métier
La chaîne de sécurité exigeait une requête authentifiée mais aucun filtre ne
peuplait le contexte : les jetons émis par AuthService n'étaient jamais
vérifiés, et le rôle porté par l'utilisateur n'atteignait jamais les règles
d'autorisation. Aucun hasRole, @PreAuthorize ni contrôle de propriété
n'existait dans le backend.

Authentification
- SessionAuthFilter : pièce manquante de la chaîne. Il pose l'identité quand le
  jeton est valide et ne refuse rien lui-même — décider du 401 ou du 403 revient
  à la chaîne de sécurité, seule à connaître les règles de la route.
- AuthService.resolveUser() distinct de me() : réutiliser me() dans un filtre
  appelé à chaque requête aurait prolongé la session à chaque appel, faisant
  d'un simple GET une écriture en base.
- Entry point et access denied handler en JSON : Spring renvoyait une page de
  connexion HTML à un client qui attend du JSON.

Autorisation
- RBAC par route dans SecurityConfig : publication et classement réservés à
  l'ADMIN, inspections au TECHNICAL, création de devis au SUPPLIER, acceptation
  au CLIENT.
- CurrentUser.requireOwnership() : le rôle dit ce qu'on peut faire, la propriété
  sur quoi. Sans ce second contrôle, un fournisseur authentifié agissait sur le
  catalogue et les devis d'un concurrent en changeant un identifiant d'URL.
- Les identifiants de propriétaire venant du corps de la requête sont ignorés au
  profit de l'utilisateur authentifié : createQuote acceptait un supplierId
  arbitraire, createQuoteRequest un clientId arbitraire, addEquipment inscrivait
  au catalogue de qui l'on voulait.
- listQuotesBySupplier exposait les prix pratiqués par un concurrent.
- Le message de refus ne nomme pas le propriétaire réel : le faire confirmerait
  l'existence de la ressource à quelqu'un qui n'y a pas droit.

Intégrité métier
- QuoteWorkflow : matrice explicite des transitions. ACCEPTED et REJECTED sont
  terminaux, ce q